--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,11 +22,12 @@
         />
 
     <EditText
-        android:id="@+id/editPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:hint="Create Password" />
+        android:hint="Create Password"
+        android:id="@+id/editPassword"
+        />
     <EditText
         android:id="@+id/confirmPassword"
         android:layout_width="wrap_content"
@@ -51,7 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign In"
-        android:onClick="signInButtonClicked"
+        android:onClick="LoginRedirect"
         />
 
 
