--- a/app/src/main/res/layout/single_menu_item.xml
+++ b/app/src/main/res/layout/single_menu_item.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="10dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="100dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp">
+            android:layout_height="120dp"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/itemImage"
@@ -20,9 +22,9 @@
 
             <TextView
                 android:id="@+id/itemName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="5dp"
                 android:layout_toRightOf="@+id/itemImage"
                 android:padding="10dp"
                 android:text="Pizza"
@@ -32,7 +34,7 @@
 
             <TextView
                 android:id ="@+id/itemDesc"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/itemName"
                 android:layout_toRightOf="@+id/itemImage"
@@ -43,16 +45,15 @@
 
             <TextView
                 android:id="@+id/itemPrice"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/itemName"
                 android:layout_toRightOf="@+id/itemDesc"
-                android:paddingLeft= "20dp"
+                android:paddingLeft= "5dp"
                 android:text="$12"
-                android:textSize="30dp"
+                android:textSize="20dp"
                 android:textStyle="bold"
                 />
-
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
