--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign In"
-        android:onClick="LoginRedirect"
+        android:onClick="loginRedirect"
+        />
+   <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="addItem"
+        android:onClick="addItemRedirect"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="menu"
+        android:onClick="menuRedirect"
         />
 
 
