--- a/app/src/main/res/layout/single_menu_item.xml
+++ b/app/src/main/res/layout/single_menu_item.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="10dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="match_parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/itemImage"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:background="@drawable/pizza"
                 />
 
             <TextView
                 android:id="@+id/itemName"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:layout_toRightOf="@+id/itemImage"
                 android:padding="10dp"
-                android:text="Pizza"
+                android:text="Name"
                 android:textColor="#000000"
-                android:textSize="30dp"
+                android:textSize="20sp"
                 />
 
             <TextView
@@ -45,14 +45,41 @@
 
             <TextView
                 android:id="@+id/itemPrice"
+                android:layout_marginTop="5dp"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/itemName"
-                android:layout_toRightOf="@+id/itemDesc"
+                android:layout_toRightOf="@+id/itemName"
                 android:paddingLeft= "5dp"
-                android:text="$12"
-                android:textSize="20dp"
+                android:text="Price"
+                android:textSize="20sp"
                 android:textStyle="bold"
+                />
+            <TextView
+                android:id="@+id/itemQuantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/itemDesc"
+                android:layout_toRightOf="@+id/itemPlus"
+                android:padding= "20dp"
+                android:text="0"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                />
+            <Button
+                android:id="@+id/itemPlus"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_below="@+id/itemDesc"
+                android:layout_toRightOf="@+id/itemImage"
+                android:background="@android:drawable/arrow_up_float"
+                />
+            <Button
+                android:id="@+id/itemMinus"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_below="@+id/itemDesc"
+                android:layout_toRightOf="@+id/itemQuantity"
+                android:background="@android:drawable/arrow_down_float"
                 />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
