--- a/app/src/main/res/layout/activity_add_restaurant.xml
+++ b/app/src/main/res/layout/activity_add_restaurant.xml
@@ -5,37 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.g6.jumpclient.AddItem">
+    tools:context="com.example.g6.jumpclient.AddRestaurant">
 
     <ImageButton
-        android:id="@+id/itemImage"
+        android:id="@+id/restaurantImage"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:onClick="imageButtonClicked"
         />
     <EditText
-        android:id="@+id/itemName"
+        android:id="@+id/restaurantName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter item name"
         />
     <EditText
-        android:id="@+id/itemDesc"
+        android:id="@+id/restaurantDesc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="Enter item description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-    <EditText
-        android:id="@+id/itemPrice"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter item price"
         />
     <Button
+        android:id="@+id/addRestaurantButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add item to menu"
-        android:onClick="addItemButtonClicked"
+        android:text="Add Restaurant"
+        android:onClick="addRestaurantButtonClicked"
         />
 
 </LinearLayout>
