--- a/app/src/main/res/layout/activity_add_restaurant.xml
+++ b/app/src/main/res/layout/activity_add_restaurant.xml
@@ -11,6 +11,7 @@
         android:id="@+id/restaurantImage"
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        android:scaleType="fitXY"
         android:onClick="imageButtonClicked"
         />
     <EditText
