--- a/app/src/main/res/layout/single_user_item.xml
+++ b/app/src/main/res/layout/single_user_item.xml
@@ -52,6 +52,7 @@
                 android:layout_toRightOf="@+id/itemName"
                 android:paddingLeft= "5dp"
                 android:text="Price"
+                android:textColor="@color/priceGreen"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 />
