--- a/app/src/main/res/layout/vendor_item_list.xml
+++ b/app/src/main/res/layout/vendor_item_list.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.g6.jumpclient.List.ItemList"
+    tools:context="com.example.g6.jumpclient.List.VendorItemList"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -20,7 +20,7 @@
         </android.support.v7.widget.RecyclerView>
 
         <TextView
-            android:id="@+id/totalPrice"
+            android:id="@+id/totalPriceDisplay"
             android:layout_below="@+id/itemList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -33,20 +33,10 @@
             android:layout_below="@+id/itemList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             android:text="Add Item"
             android:onClick="addItemClicked"
             />
 
-        <Button
-            android:id="@+id/submitOrderButton"
-            android:layout_below="@+id/totalPrice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:text="Submit Order"
-            android:onClick="submitOrderClicked"
-            />
     </RelativeLayout>
 
 </android.support.v4.widget.NestedScrollView>
