--- a/app/src/main/res/menu/order_list_menu.xml
+++ b/app/src/main/res/menu/order_list_menu.xml
@@ -3,12 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
+        android:title="Filter by Status"
+        android:showAsAction="ifRoom">
+        <menu>
+            <item
+                android:id="@+id/draft"
+                android:title="draft" />
+            <item
+                android:id="@+id/pending"
+                android:title="pending" />
+        </menu>
+    </item>
+    <item
         android:id="@+id/action_orders"
         android:orderInCategory="1"
         android:title="View Orders"
         android:icon="@drawable/menu_icon"
         app:showAsAction="ifRoom" />
-
+    
     <item
         android:id="@+id/action_signOut"
         android:orderInCategory="2"
