--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#720d0d</color>
     <color name="colorAccent">#999900</color>
     <color name="priceGreen">#1b5612</color>
+    <color name="notificationNumber">#d80000</color>
+
 </resources>
