--- a/app/src/main/res/layout/order_view.xml
+++ b/app/src/main/res/layout/order_view.xml
@@ -46,6 +46,19 @@
             android:visibility="gone"
             android:onClick="buttonClicked"
             />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+            android:text="Order Completed, Please Rate" />
+        <RatingBar
+            android:id="@+id/rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/totalPrice"
+            style="?android:attr/ratingBarStyleIndicator"
+            android:numStars="5"
+            android:stepSize="0.1"
+            android:isIndicator="true" />
     </RelativeLayout>
 
 </android.support.v4.widget.NestedScrollView>
