--- a/app/src/main/res/menu/order_list_menu.xml
+++ b/app/src/main/res/menu/order_list_menu.xml
@@ -11,6 +11,9 @@
         >
         <menu>
             <item
+                android:id="@+id/All"
+                android:title="All" />
+            <item
                 android:id="@+id/draft"
                 android:title="Draft" />
             <item
@@ -30,13 +33,6 @@
                 android:title="Completed" />
         </menu>
     </item>
-    <item
-        android:id="@+id/action_orders"
-        android:orderInCategory="2"
-        android:title="View Orders"
-        android:icon="@drawable/menu_icon"
-        app:showAsAction="ifRoom" />
-    
     <item
         android:id="@+id/action_signOut"
         android:orderInCategory="3"
