--- a/app/src/main/res/layout/order_list.xml
+++ b/app/src/main/res/layout/order_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.g6.jumpclient.List.LocationList">
+    tools:context="com.example.g6.jumpclient.List.LocaleList">
     <android.support.v7.widget.RecyclerView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
