--- a/app/src/main/res/layout/order_view.xml
+++ b/app/src/main/res/layout/order_view.xml
@@ -47,18 +47,32 @@
             android:onClick="buttonClicked"
             />
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-            android:text="Order Completed, Please Rate" />
-        <RatingBar
-            android:id="@+id/rating"
+            android:id="@+id/ratingText"
+            android:layout_marginTop="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/totalPrice"
-            style="?android:attr/ratingBarStyleIndicator"
+            android:textSize="20sp"
+            android:visibility="gone"
+            android:text="Order Completed, Please Rate" />
+        <RatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ratingText"
             android:numStars="5"
-            android:stepSize="0.1"
-            android:isIndicator="true" />
+            android:stepSize="1.0"
+            android:visibility="gone"
+            android:isIndicator="false" />
+        <Button
+            android:id="@+id/ratingSubmitButton"
+            android:layout_below="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Submit Rating"
+            android:visibility="gone"
+            android:onClick="submitRating"
+            />
     </RelativeLayout>
 
 </android.support.v4.widget.NestedScrollView>
