--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,20 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
-        android:id="@+id/action_orders"
+        android:id="@+id/action_promos"
         android:orderInCategory="1"
+        android:title="View Promotions"
+        android:icon="@mipmap/notification_on_icon"
+        android:actionLayout="@layout/badge_counter"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_orders"
+        android:orderInCategory="2"
         android:title="View Orders"
         android:icon="@drawable/menu_icon"
         android:actionLayout="@layout/badge_counter"
         app:showAsAction="always" />
 
+
     <item
         android:id="@+id/action_signOut"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
         android:title="Sign Out"/>
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="3"
+        android:orderInCategory="4"
         android:title="Settings">
     </item>
 
