Final Commit Before Submission

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
         <RadioButton android:id="@+id/radio_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign Up as User"
+            android:text="Sign Up as Customer"
             android:checked="true"/>
 
         <RadioButton android:id="@+id/radio_vendor"
