--- a/app/src/main/res/menu/order_list_menu.xml
+++ b/app/src/main/res/menu/order_list_menu.xml
@@ -31,6 +31,9 @@
             <item
                 android:id="@+id/completed"
                 android:title="Completed" />
+            <item
+                android:id="@+id/rated"
+                android:title="Rated" />
         </menu>
     </item>
     <item
